# blog

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx-load-balancer.conf  nginx.conf  requirements.txt  schema.sql  setup.cfg
.github/workflows/: pr.yaml  tag.yaml
blog/: app.py
blog/db/: api.py
blog/db/cosmosdb/: api.py
blog/db/sqlalchemy/: api.py  model_base.py  models.py
blog/templates/: base.html  index.html
kustomize/base/: blog.yml
kustomize/overlays/production/: blog-deploy-change-env.yaml  kustomization.yaml
kustomize/overlays/test/: blog-deploy-change-env.yaml  blog-service.yaml  kustomization.yaml  mysql-rm-volumeClaimTemplates.yaml  mysql-sts.yaml
manifests/: blog.yml  mysql.yml  namespace.yml  storage.yml
templates/: base.html  index.html
