[metadata]
name = blog
summary = A demo
author = Lingxian Kong
author-email = anlin.kong@gmail.com
home-page = https://github.com/lingxiankong
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    blog

[entry_points]
console_scripts =
